[package]
name = "kara"
version = "0.1.0"
edition = "2021"
license = "Minecraft Mod License"
description = "Crafting interpreters tutorial implementation in Rust, \
named Kara after the first girl I kissed <3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
itertools = "0.11.0"
peeking_take_while = "1.0.0"
strum = "0.25"
strum_macros = "0.25"
